Fixed sign in button to be aligned right!!!!!!

--- a/css/custom.css
+++ b/css/custom.css
@@ -1,4 +1,5 @@
 .fa-sign-in-alt {
     justify-content: right;
     position: relative;
+    float: right;
 }
